--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@googleapis/docs": "^2.0.5",
+    "googleapis": "^126.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
